{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 182,
  "lineage": "771fec4c-1c14-d419-e646-bab912695775",
  "resources": [
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472520836625:security-group/sg-041508f14aa67ddc3",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-041508f14aa67ddc3",
            "ingress": [],
            "name": "second-altair20230623140756860400000001",
            "name_prefix": "second-altair",
            "owner_id": "472520836625",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-altair"
            },
            "tags_all": {
              "Name": "SG-altair"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b1383954786d9b0"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472520836625:security-group/sg-057c0a393455a1772",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-057c0a393455a1772",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "second-worker-sg-mgmt20230623140756861000000002",
            "name_prefix": "second-worker-sg-mgmt",
            "owner_id": "472520836625",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05b1383954786d9b0"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2164307004",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-041508f14aa67ddc3",
            "security_group_rule_id": "sgr-0d36cf790950e9b54",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}